--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
         <script>
-            {% include "script/darkmode.js" %}
-        </script>
+            {% include "layout_preinit.js" %}</script>
     </head>
     <body class="antialiased rubik.className">
         <div class="flex min-h-screen flex-col">
@@ -59,6 +58,7 @@
                             <div class="absolute top-full left-0 isolate z-50 flex justify-center"></div>
                         </nav>
                         <button
+                            id="mobileNavButton"
                             data-slot="button"
                             class="justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none
                                 disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0
@@ -66,123 +66,33 @@
                                 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent
                                 hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 ml-4 flex items-center space-x-2
                                 md:hidden">
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="24"
-                                height="24"
-                                viewbox="0 0 24 24"
-                                fill="none"
-                                stroke="currentColor"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                class="lucide lucide-menu"
-                                aria-hidden="true">
-                                <path d="M4 12h16"></path>
-                                <path d="M4 18h16"></path>
-                                <path d="M4 6h16"></path>
-                            </svg>
+                            {% include 'icons/menu.njk' %}
                             <span class="font-bold">Alex Westerman</span>
                         </button>
-                        <div class="slide-in-from-bottom-80 fixed inset-0 top-10 z-50 grid h-[calc(100vh-4rem)] animate-in grid-flow-row auto-rows-max
-                                overflow-auto p-6 pb-32 shadow-md md:hidden">
+                        <div
+                            id="mobileNavMenu"
+                            class="hidden slide-in-from-bottom-80 fixed inset-0 top-10 z-50 grid h-[calc(100vh-4rem)] animate-in grid-flow-row
+                                auto-rows-max overflow-auto p-6 pb-32 shadow-md md:hidden">
                             <div class="relative z-20 grid gap-6 rounded-md bg-popover p-4 text-popover-foreground shadow-lg">
                                 <nav class="grid grid-flow-row auto-rows-max text-sm">
                                     <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/">
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="24"
-                                            height="24"
-                                            viewbox="0 0 24 24"
-                                            fill="none"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            class="lucide lucide-house"
-                                            aria-hidden="true">
-                                            <path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"></path>
-                                            <path d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                                        </svg>
+                                        {% include 'icons/house.njk' %}
                                         <span>Home</span>
                                     </a>
                                     <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/projects.njk">
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="24"
-                                            height="24"
-                                            viewbox="0 0 24 24"
-                                            fill="none"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            class="lucide lucide-square-dashed-bottom-code"
-                                            aria-hidden="true">
-                                            <path d="M10 9.5 8 12l2 2.5"></path>
-                                            <path d="M14 21h1"></path>
-                                            <path d="m14 9.5 2 2.5-2 2.5"></path>
-                                            <path d="M5 21a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2"></path>
-                                            <path d="M9 21h1"></path>
-                                        </svg>
+                                        {% include 'icons/square_dashed_bottom_code.njk' %}
                                         <span>Projects</span>
                                     </a>
                                     <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/resume">
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="24"
-                                            height="24"
-                                            viewbox="0 0 24 24"
-                                            fill="none"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            class="lucide lucide-scroll-text"
-                                            aria-hidden="true">
-                                            <path d="M15 12h-5"></path>
-                                            <path d="M15 8h-5"></path>
-                                            <path d="M19 17V5a2 2 0 0 0-2-2H4"></path>
-                                            <path d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3"></path>
-                                        </svg>
+                                        {% include 'icons/scroll_text.njk' %}
                                         <span>Resume</span>
                                     </a>
                                     <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/blog">
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="24"
-                                            height="24"
-                                            viewbox="0 0 24 24"
-                                            fill="none"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            class="lucide lucide-rss"
-                                            aria-hidden="true">
-                                            <path d="M4 11a9 9 0 0 1 9 9"></path>
-                                            <path d="M4 4a16 16 0 0 1 16 16"></path>
-                                            <circle cx="5" cy="19" r="1"></circle>
-                                        </svg>
+                                        {% include 'icons/rss.njk' %}
                                         <span>Blog</span>
                                     </a>
                                     <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/about">
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="24"
-                                            height="24"
-                                            viewbox="0 0 24 24"
-                                            fill="none"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            class="lucide lucide-circle-user"
-                                            aria-hidden="true">
-                                            <circle cx="12" cy="12" r="10"></circle>
-                                            <circle cx="12" cy="10" r="3"></circle>
-                                            <path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"></path>
-                                        </svg>
+                                        {% include 'icons/circle_user.njk' %}
                                         <span>About</span>
                                     </a>
                                 </nav>
@@ -191,6 +101,7 @@
                         <span class="grow"></span>
                         <div class="flex pr-2">
                             <button
+                                id="darkModeToggle"
                                 data-slot="button"
                                 class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all
                                     disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4
@@ -198,22 +109,7 @@
                                     aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary
                                     underline-offset-4 hover:underline h-9 px-4 py-2 has-[>svg]:px-3"
                                 aria-label="Change Light/Dark Mode">
-                                <svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
-                                    viewbox="0 0 24 24"
-                                    fill="none"
-                                    stroke="currentColor"
-                                    stroke-width="2"
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    class="lucide lucide-moon-star"
-                                    aria-hidden="true">
-                                    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9"></path>
-                                    <path d="M20 3v4"></path>
-                                    <path d="M22 5h-4"></path>
-                                </svg>
+                                {% include 'icons/moon_star.njk' %}
                             </button>
                         </div>
                     </div>
@@ -238,5 +134,6 @@
                 </footer>
             </div>
         </div>
+        <script>{% include 'layout_postinit.js' %}</script>
     </body>
 </html>
