--- a/src/_includes/icons/twitter.njk
+++ b/src/_includes/icons/twitter.njk
@@ -17,7 +17,7 @@ https://lucide.dev/license
         [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring
         focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20
         dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline
-        size-9 h-6 w-6 md:h-10 md:w-10 h-6 w-6 md:h-10 md:w-10"
+        size-9 h-6 w-6 md:h-10 md:w-10"
     data-slot="tooltip-trigger"
     data-state="closed">
     <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8
