--- a/src/resume.njk
+++ b/src/resume.njk
@@ -27,8 +27,8 @@ layout: 'layouts/base.njk'
                     data-slot="card-header"
                     class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
                         has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
-                    <div data-slot="card-title" class="leading-none font-semibold">{{ experience.position }} @ {{experience.name}}</div>
-                    <div data-slot="card-description" class="text-muted-foreground text-sm">{{ experience.timeEmployed }} in {{experience.location}}</div>
+                    <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ experience.position }} @ {{experience.name}}</div>
+                    <div data-slot="card-description" class="text-muted-foreground text-md">{{ experience.timeEmployed }} in {{experience.location}}</div>
                 </div>
                 <div data-slot="card-content" class="px-6">
                     <ul class="list-disc px-6">
@@ -50,8 +50,8 @@ layout: 'layouts/base.njk'
                     data-slot="card-header"
                     class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
                         has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
-                    <div data-slot="card-title" class="leading-none font-semibold">{{ education.name }} </div>
-                    <div data-slot="card-description" class="text-muted-foreground text-sm">{{ education.degree }} - {{education.graduationDate}}</div>
+                    <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ education.name }} </div>
+                    <div data-slot="card-description" class="text-muted-foreground text-md">{{ education.degree }} - {{education.graduationDate}}</div>
                 </div>
                 <div data-slot="card-content" class="px-6">
                     <em>Notes: {{education.degreeAddendum}}</em>
