--- a/src/_includes/icons/github.njk
+++ b/src/_includes/icons/github.njk
@@ -12,7 +12,7 @@ https://lucide.dev/license
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
-    class="lucide lucide-bluesky lucide-Bluesky inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md
+    class="lucide lucide-github lucide-Github inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md
         text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none
         [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring
         focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20
@@ -20,9 +20,8 @@ https://lucide.dev/license
         size-9 h-6 w-6 md:h-10 md:w-10"
     data-slot="tooltip-trigger"
     data-state="closed">
-    <path d="M6.335 4.38c2.293 1.722 4.76 5.212 5.665 7.085.906-1.873 3.372-5.363 5.665-7.085C19.319 3.138 22 2.177 22 5.235c0
-        .611-.35 5.131-.556 5.865-.713 2.551-3.315 3.202-5.629 2.808 4.045.688 5.074 2.97 2.852 5.25-4.22
-        4.33-6.066-1.088-6.54-2.476-.086-.254-.126-.373-.127-.272 0-.1-.041.018-.128.272-.473 1.388-2.318 6.806-6.539
-        2.475-2.222-2.28-1.193-4.56 2.852-5.249-2.314.394-4.916-.257-5.63-2.808C2.35 10.366 2 5.846 2 5.235c0-3.058 2.68-2.097
-        4.335-.855"></path>
+    <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3
+        1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85
+        1.65-.17.6-.22 1.23-.15 1.85v4"></path>
+    <path d="M9 18c-4.51 2-5-2-7-2"></path>
 </svg>
