--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -1,26 +1,12 @@
 ---
-layout: layouts/base.njk
+layout: 'layouts/base.njk'
 ---
 
 <div className='flex flex-col justify-center'>
     <div className='mb-4 flex flex-row'>
         <a href='/blog'>
             <div className='flex flex-row space-x-2'>
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-arrow-left text-neutral-600 dark:text-neutral-500"
-                    aria-hidden="true">
-                    <path d="m12 19-7-7 7-7"></path>
-                    <path d="M19 12H5"></path>
-                </svg>
+                {% include 'icons/arrow_left.njk' %}
                 <p className='text-neutral-600 dark:text-neutral-500'>Back to the Main Page</p>
             </div>
         </a>
